--- a/package.json
+++ b/package.json
@@ -55,15 +55,15 @@
     ]
   },
   "dependencies": {
-    "can": "^5.16.0",
+    "can": "^5.21.0",
     "can-route-pushstate": "^5.0.7",
-    "can-stache-route-helpers": "^1.1.1",
+    "can-stache-route-helpers": "^1.1.3",
     "can-zone": "^1.0.0",
-    "done-autorender": "^2.5.3",
+    "done-autorender": "^2.5.5",
     "done-component": "^2.2.0",
     "done-css": "^3.0.2",
     "done-serve": "^3.0.0",
-    "generator-donejs": "^3.0.0",
+    "generator-donejs": "^3.2.0",
     "steal": "^2.1.6",
     "steal-less": "^1.2.2",
     "steal-stache": "^4.1.2"
@@ -71,7 +71,7 @@
   "devDependencies": {
     "can-debug": "^2.0.1",
     "can-route-hash": "^1.0.1",
-    "donejs-cli": "^3.0.0-pre.5",
+    "donejs-cli": "^3.1.1",
     "funcunit": "^3.6.1",
     "steal-conditional": "^1.0.0",
     "steal-qunit": "^1.0.1",
